Actualizacion de CV, cambio de SQA a Developers.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p >Actualmente trabajo en una compañía llamada PayGroup, soy SQA en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
+					<p >Actualmente trabajo en una compañía llamada PayGroup, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
             Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
           </p>
 				</div>
@@ -107,7 +107,7 @@
 					<h5>EDUCACIÓN</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Ingeniera de Sistemas</t><br/>
+					<p><t>Licenciatura de Sistemas</t><br/>
 						Universidad Catolica del Uruguay <br/>
 						<i> 3 Años cursados</i>
 					</p>
@@ -142,10 +142,10 @@
 					<h5>EXPERIENCIA</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>SQA - Tester </t><br/>
-						PayGroup <br/>
+					<p><t>Java Developer </t><br/>
+						Evertec <br/>
 					</p>
-					<p><more>En PayGroup pertenezco al Equipo de Qa que nos encargamos de la calidad del Producto PayStudioCards que básicamente es un Core de Tarjetas que brinda soluciones que asisten a las empresas (bancos, retailers, procesadoras, adquirentes y emisores) a resolver, mejorar o incorporar herramientas para gestionar sus medios de pago, ya sean soluciones clásicas de tarjetas de crédito, débito o para administrar nuevos productos como tarjetas prepagas (físicas y virtuales) en modalidades corporate o de persona física, sistemas voucher, gestión de contracargos, pagos móviles o modernizar los sistemas actuales.</more></p>
+					<p><more>En Evertec pertenezco al Equipo de desarrollo de una solucion producto Core de Tarjetas que brinda soluciones que asisten a las empresas (bancos, retailers, procesadoras, adquirentes y emisores) a resolver, mejorar o incorporar herramientas para gestionar sus medios de pago, ya sean soluciones clásicas de tarjetas de crédito, débito o para administrar nuevos productos como tarjetas prepagas (físicas y virtuales) en modalidades corporate o de persona física, sistemas voucher, gestión de contracargos, pagos móviles o modernizar los sistemas actuales.</more></p>
 				</div>
 				<div class="col-lg-3">
 					<imp><sm> 03/2016 - ACTUALIDAD</sm></imp>
