--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="row centered">
       <div class="col-lg-12 animated zoomIn">
         <h1 id="nombre" >Nicolas Placeres Castifor</h1>
-        <h3 id="nombre">Web Designer - SQA - Developer | nicolasplaceresCastifor@gmail.com</h3>
+        <h3 id="nombre">Web Designer - Developer - SQA | nicolasplaceresCastifor@gmail.com</h3>
         <a href="https://www.facebook.com/NicolasPlaceresCastifor" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/nicolas-placeres-219bbb95/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
         <a href="https://nico231994.github.io/" target="_blank"><i class="fa fa-github fa-2x"></i></a>
@@ -85,7 +85,7 @@
 					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p >Actualmente trabajo en una compañía llamada PayGroup, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
+					<p >Actualmente trabajo en una compañía llamada Evertec, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
             Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
           </p>
 				</div>
