Se corrige falta de Ortografía.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p >Actualmente trabajo en una compañía llamada Evertec, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el font-end aunque tengo experiencia en ambas ramas de la programación web.
+					<p >Actualmente trabajo en una compañía llamada Evertec, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el front-end aunque tengo experiencia en ambas ramas de la programación web.
             Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
           </p>
 				</div>
