--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <i class="fa fa-check" aria-hidden="true"></i> Trabajo en equipo<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Elaboración de Power Point con métricas de horas<br/>
             <i class="fa fa-check" aria-hidden="true"></i> Marketing digital<br/>
-	    <i class="fa fa-check" aria-hidden="true"></i> ISO8583 / Mensajeria MasterCard / VISA / AMEX<br/>					
+	    <i class="fa fa-check" aria-hidden="true"></i> Mensajeria ISO8583 / MasterCard / VISA / AMEX<br/>					
 	    <i class="fa fa-check" aria-hidden="true"></i> JAVA EE<br/>
             <i class="fa fa-check" aria-hidden="true"></i> JBoss / Wildfly<br/>
 
