--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<h5>Acerca de mi:</h5>
 				</div>
 				<div class="col-lg-6">
-					<p >Actualmente trabajo en una compañía llamada Evertec, soy desarrollador Java en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el front-end aunque tengo experiencia en ambas ramas de la programación web.
+					<p >Actualmente trabajo en Verifone, soy desarrollador FullStack(Java/Angular) en el producto de Switching y Routing de transacciones. En mi tiempo libre, hago trabajos freelance como pueden ser Paginas Web, Diseño de Iconos y Folletos. Me gusta mucho el front-end aunque tengo experiencia en ambas ramas de la programación web.
             Soy una persona creativa, entusiasta, comprometida y que le gusta desafiarse. Amante de la tecnología y fanático del deporte
           </p>
 				</div>
@@ -141,6 +141,16 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>EXPERIENCIA</h5>
 				</div>
+					<div class="col-lg-6">
+						<p><t>Sr. Gateway Development </t><br/>
+							VERIFONE <br/>
+						</p>
+						<p><more>En Verifone desarrollo tareas de desarrollador FullStack con lenguajes Java(back-end) y Angular como (Front-end). Estoy adquiriendo experiencia en Maven, spring-boot, clauster y dockers. </more></p>
+					</div>
+					<div class="col-lg-3">
+						<imp><sm> 10/2019 - ACTUALIDAD</sm></imp>
+					</div>	
+				</div>
 				<div class="col-lg-6">
 					<p><t>Java Developer </t><br/>
 						Evertec <br/>
@@ -148,7 +158,7 @@
 					<p><more>En Evertec pertenezco al Equipo de desarrollo de una solucion producto Core de Tarjetas que brinda soluciones que asisten a las empresas (bancos, retailers, procesadoras, adquirentes y emisores) a resolver, mejorar o incorporar herramientas para gestionar sus medios de pago, ya sean soluciones clásicas de tarjetas de crédito, débito o para administrar nuevos productos como tarjetas prepagas (físicas y virtuales) en modalidades corporate o de persona física, sistemas voucher, gestión de contracargos, pagos móviles o modernizar los sistemas actuales.</more></p>
 				</div>
 				<div class="col-lg-3">
-					<imp><sm> 03/2016 - ACTUALIDAD</sm></imp>
+					<imp><sm> 03/2016 - 10/2019</sm></imp>
 				</div>
 
 				<div class="col-lg-6 col-lg-offset-3">
