--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<div class="col-lg-3">
 						<imp><sm> 10/2019 - ACTUALIDAD</sm></imp>
 					</div>	
-				<div class="col-lg-6 col-lg-offset-3>
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Java Developer </t><br/>
 						Evertec <br/>
 					</p>
