--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 		</div><!--/.container -->
 	</div><!--/ #intro -->
 
-
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
 	<section id="resume" name="resume"></section>
 	<!--EDUCATION DESCRIPTION -->
 	<div class="container desc">
@@ -172,10 +176,10 @@
 			</div>
 			<div class="col-lg-3">
 				<imp>
-					<sm> 10/2021 - 02/2022</sm>
+					<sm> 02/2022 - ACTUALIDAD</sm>
 				</imp>
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-6 col-lg-offset-3">
 				<p>
 					<t>Software Developer Engineer </t><br />
 					Technisys <br />
@@ -187,11 +191,11 @@
 				</p>
 			</div>
 			<div class="col-lg-3">
-				<imp>
+				<p>
 					<sm> 10/2021 - 02/2022</sm>
-				</imp>
+				</p>
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-6 col-lg-offset-3">
 				<p>
 					<t>Sr. Gateway Development </t><br />
 					VERIFONE <br />
@@ -203,9 +207,9 @@
 				</p>
 			</div>
 			<div class="col-lg-3">
-				<imp>
+				<p>
 					<sm> 10/2019 - 08/2021</sm>
-				</imp>
+				</p>
 			</div>
 			<div class="col-lg-6 col-lg-offset-3">
 				<p>
